# tenjin

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  api.py  app.py  config.toml.example  conversation.py  dagster.yaml.example  docker-compose.yml  gpt.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  technical-task.md
chat_templates/: books.py
connectors/: pinecone.py
demos/: document-search.py
embedders/: openai_embedder.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatForm.tsx  ChatHistory.tsx  PDFViewer.tsx
frontend/components/cases/: CaseList.tsx
frontend/components/chat/: ChatForm.tsx  index.tsx
frontend/components/chat/messages/: Avatar.tsx  MessageBubble.tsx  SourceLink.tsx  UserMessage.tsx  index.tsx
frontend/components/layout/: Flyout.tsx  navbar.tsx
frontend/pages/api/: converse.ts
readers/: pdf_reader.py
scripts/: paths.sh
tenjin/: __init__.py  app.py  config.py  conversation.py  main.py  question_answer.py
tenjin/actions/: __init__.py  bing_search.py  conductor.py  google_search.py
tenjin/agents/: default.json
tenjin/chat_templates/: books.py  conversation_prompt_template.py
tenjin/connectors/: google_drive.py
tenjin/prompts/: base.py
tenjin/readers/: pdf_reader.py
tenjin/utils/: date.py  storage.py
tests/unit_tests/: question_answer_test.py
tests/unit_tests/connectors/: google_drive_test.py
tests/unit_tests/utils/: date_test.py
